Reconsidering some changes to make GlassFish work with JDK 8 as well as JDK 11.
Signed-off-by: hs536 <sawamura.hiroki@fujitsu.com>